update active enum
