# pkg/models/user.go
@@ -7,7 +7,7 @@ type User struct {
 	Username string `gorm:"unique;not null"`
 	Password string `gorm:"not null" json:"-"`
 	RoleId   uint   `gorm:"not null;constraint:OnDelete:CASCADE"`
-	IsActive   ActiveEnum `json:"isActive" form:"isActive" validate:"required" gorm:"type:isactive_enum"`
+	Active   ActiveEnum `gorm:"type:isactive_enum"`
 	Role     Role   `gorm:"foreignKey:RoleId" json:"-"` //One to Many
 }
 
